1. Organized unused files, and revised working codes.

--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -31,11 +31,9 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 91.0.4472\n",
-      "Get LATEST driver version for 91.0.4472\n",
-      "Get LATEST driver version for 91.0.4472\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/91.0.4472.101/chromedriver_win32.zip\n",
-      "Driver has been saved in cache [C:\\Users\\haiyo\\.wdm\\drivers\\chromedriver\\win32\\91.0.4472.101]\n"
+      "Current google-chrome version is 95.0.4638\n",
+      "Get LATEST driver version for 95.0.4638\n",
+      "Driver [C:\\Users\\haiyo\\.wdm\\drivers\\chromedriver\\win32\\95.0.4638.69\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -75,8 +73,7 @@
    "outputs": [],
    "source": [
     "html = browser.html\n",
-    "news_soup = soup(html, 'html.parser')\n",
-    "slide_elem = news_soup.select_one('div.list_text')"
+    "news_soup = soup(html, 'html.parser')"
    ]
   },
   {
@@ -87,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA, ULA Launch Mars 2020 Perseverance Rover Mission to Red Planet</div>"
+       "<div class=\"content_title\">NASA's New Mars Rover Will Use X-Rays to Hunt Fossils</div>"
       ]
      },
      "execution_count": 5,
@@ -96,6 +93,8 @@
     }
    ],
    "source": [
+    "# Pull one content title from website\n",
+    "slide_elem = news_soup.select_one('div.list_text')\n",
     "slide_elem.find('div', class_='content_title')"
    ]
   },
@@ -107,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "'NASA, ULA Launch Mars 2020 Perseverance Rover Mission to Red Planet'"
+       "\"NASA's New Mars Rover Will Use X-Rays to Hunt Fossils\""
       ]
      },
      "execution_count": 6,
@@ -129,7 +128,7 @@
     {
      "data": {
       "text/plain": [
-       "\"The agency's Mars 2020 mission is on its way. It will land at Jezero Crater in about seven months, on Feb. 18, 2021. \""
+       "\"PIXL, an instrument on the end of the Perseverance rover's arm, will search for chemical fingerprints left by ancient microbes.\""
       ]
      },
      "execution_count": 7,
@@ -139,8 +138,8 @@
    ],
    "source": [
     "# Use the parent element to find the paragraph text\n",
-    "news_p = slide_elem.find('div', class_='article_teaser_body').get_text()\n",
-    "news_p"
+    "news_paragraph = slide_elem.find('div', class_='article_teaser_body').get_text()\n",
+    "news_paragraph"
    ]
   },
   {
@@ -200,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars1.jpg'"
+       "'image/featured/mars2.jpg'"
       ]
      },
      "execution_count": 12,
@@ -222,7 +221,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
       ]
      },
      "execution_count": 13,
@@ -234,6 +233,13 @@
     "# Use the base URL to create an absolute URL\n",
     "img_url = f'https://spaceimages-mars.com/{img_url_rel}'\n",
     "img_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mars & Earth Facts"
    ]
   },
   {
@@ -381,9 +387,9 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 91.0.4472\n",
-      "Get LATEST driver version for 91.0.4472\n",
-      "Driver [C:\\Users\\haiyo\\.wdm\\drivers\\chromedriver\\win32\\91.0.4472.101\\chromedriver.exe] found in cache\n"
+      "Current google-chrome version is 95.0.4638\n",
+      "Get LATEST driver version for 95.0.4638\n",
+      "Driver [C:\\Users\\haiyo\\.wdm\\drivers\\chromedriver\\win32\\95.0.4638.69\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -430,7 +436,7 @@
     "\n",
     "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
     "links = browser.find_by_css('a.product-item img')\n",
-    "title = browser.find_by_css('h3.title')\n",
+    "title = browser.find_by_css('h2.title')\n",
     "\n",
     "for image in range(len(links)): \n",
     "    hemispheres = {}\n",
